Publish using GitHub actions and target Java 21.